# qdrant-rag

./: README.md  evaluations.py  main.py  pyproject.toml
